Fix spacing issues

--- a/src/assets/styles/cmps/DatePicker.css
+++ b/src/assets/styles/cmps/DatePicker.css
@@ -4,7 +4,7 @@
 
 .search-bar-wrapper .date-modal-content {
   position: absolute;
-  top: calc(100% + 8px);
+  top: calc(100% + 12px);
   left: 50%;
   transform: translateX(-50%);
   background: var(--white);
