--- a/src/assets/styles/cmps/WhereAutocomplete.css
+++ b/src/assets/styles/cmps/WhereAutocomplete.css
@@ -79,7 +79,7 @@
 
 .where-modal-content {
   position: absolute;
-  top: calc(100% + 8px);
+  top: calc(100% + 12px);
   left: 0;
   width: 425px;
   max-width: 425px;
@@ -103,10 +103,12 @@
 }
 
 .suggestions-dropdown-header {
+  font-family: cereal-light;
   display: block;
-  padding: 0 2rem 1rem;
+  padding: 0 2rem ;
+  margin-block-end: 0.25rem;
   font-size: 0.75rem;
-  font-weight: 600;
+  font-weight: 400;
   color: var(--gray3);
   text-transform: none;
   letter-spacing: 0;
@@ -115,7 +117,7 @@
 .suggestion-item {
   display: flex;
   align-items: center;
-  padding: 0.75rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   margin: 0 0.5rem;
   border-radius: 0.75rem;
   cursor: pointer;
@@ -128,10 +130,10 @@
 }
 
 .suggestion-icon {
-  width: 3rem;
-  height: 3rem;
-  min-width: 3rem;
-  min-height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  min-width: 3.5rem;
+  min-height: 3.5rem;
   border-radius: 0.75rem;
   background-color: var(--gray1);
   overflow: hidden;
